--- a/Idea_collection_system/package.json
+++ b/Idea_collection_system/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.1"
+    "express-rate-limit": "^7.1.1",
+    "mysql2": "^3.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
