--- a/Idea_collection_system/package.json
+++ b/Idea_collection_system/package.json
@@ -14,11 +14,13 @@
   "author": "shihab mirza",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.2"
   },
