--- a/Idea_collection_system/package.json
+++ b/Idea_collection_system/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.2"
+    "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
