--- a/Idea_collection_system/package.json
+++ b/Idea_collection_system/package.json
@@ -14,6 +14,7 @@
   "author": "shihab mirza",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^6.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
