--- a/Idea_collection_system/package.json
+++ b/Idea_collection_system/package.json
@@ -17,6 +17,7 @@
     "archiver": "^6.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
