--- a/Idea_collection_system/.env
+++ b/Idea_collection_system/.env
@@ -1,6 +1,6 @@
 PORT=4455
 API_VERSION=1.0.0
-MYSQL_PASSWORD="root"
+MYSQL_PASSWORD="Shihab786.."
 
 JWT_SECRET="UoG_Sup3rSecr3t_Passw0rd!!!"
 REFRESH_SECRET="UoG_Refr3sh_Sup3rSecr3t_Passw0rd123.."
